trustfall_core/test_data/tests/valid_queries/nested_query.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 3) {
        value @output

        successor {
            successor: value @output
        }
    }
}"#,
    arguments: {},
)
