trustfall_core/test_data/tests/parse_errors/unrecognized_directive.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 5) {
        value @unrecognized
    }
}"#,
    arguments: {},
)
